public class Axis
{
    public const string HORIZONTAL_AXIS = "Horizontal";
    public const string VERTICAL_AXIS = "Vertical";
}

public class AnimationTags
{
    public const string MOVEMENT = "Movement";

    public const string PUCNH_01 = "Punch01";
    public const string PUCNH_02 = "Punch02";
    public const string PUCNH_03 = "Punch03";

    public const string KICK_01 = "Kick01";
    public const string KICK_02 = "Kick02";
}

public class Tags
{
    public const string PLAYER_TAG = "Player";
}